# lumina

./: .gitignore  README.md  pyproject.toml
packaging/: lumina.desktop  lumina.service
scripts/: check_dependencies.py  install.sh  install_desktop.py  install_service.py  uninstall.py
src/lumina/: __main__.py  cli.py
src/lumina/daemon/: service.py
src/lumina/monitor/: backend.py  ddcutil_backend.py  manager.py  models.py
src/lumina/shortcuts/: keybinds.py
src/lumina/themes/: base.py  manager.py  models.py
src/lumina/themes/aurora/: __init__.py  theme.py
src/lumina/themes/catppuccin/: theme.py
src/lumina/themes/dracula/: theme.py
src/lumina/themes/glass/: effects.py  shadow.py  theme.py
src/lumina/themes/minimal/: theme.py
src/lumina/themes/nord/: theme.py
src/lumina/tray/: main.py  tray_icon.py
src/lumina/widget/: main.py  theme_preview.py  toggle_window.py  window.py
src/lumina_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_backend.py  test_dependencies.py  test_hotkeys_live.py  test_install.py  test_manager.py  test_service.py  test_themes.py  test_tray.py
