[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumina-monitor"
version = "0.1.0"

description = "Modern Linux monitor brightness and contrast control widget"
readme = "README.md"

requires-python = ">=3.10"

license = { text = "MIT" }

authors = [
    { name = "Ramakrishna Reddy Palle" }
]

keywords = [
    "linux",
    "monitor",
    "brightness",
    "ddcutil",
    "display",
    "desktop",
    "qt",
    "pyqt",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "PyQt6>=6.6",
    "psutil>=5.9",
    "pynput>=1.7"
]

[project.urls]
Homepage = "https://github.com/RamakrishnaReddyPallelumina"
Repository = "https://github.com/RamakrishnaReddyPalle/lumina"
Issues = "https://github.com/RamakrishnaReddyPalle/lumina/issues"

[project.scripts]
lumina = "lumina.cli:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lumina = [
    "**/*.svg",
    "**/*.json"
]